--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "expo": "^50.0.0",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "^15.0.4",
     "expo-constants": "^15.4.6",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
