--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-constants": "^15.4.6",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.12.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-camera": "^4.2.1",
