--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "^50.0.0",
+    "expo": "^51.0.8",
     "expo-barcode-scanner": "^13.0.1",
-    "expo-camera": "^15.0.4",
-    "expo-constants": "^15.4.6",
+    "expo-camera": "^15.0.9",
+    "expo-constants": "^16.0.1",
     "expo-permissions": "^14.4.0",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "^1.12.1",
     "firebase": "^10.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.1",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-safe-area-context": "^4.10.1",
