--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.10",
     "expo-constants": "^16.0.1",
+    "expo-image-picker": "~15.0.5",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "^1.12.1",
     "firebase": "^10.12.1",
     "react": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-gesture-handler": "^2.16.1",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-safe-area-context": "^4.10.3",
     "react-native-screens": "^3.31.1",
     "react-router-native": "^6.23.0"
