--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "^51.0.8",
+    "expo": "^51.0.13",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.10",
-    "expo-constants": "^16.0.1",
+    "expo-constants": "^16.0.2",
     "expo-image-picker": "~15.0.5",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "^1.12.1",
     "firebase": "^10.12.1",
     "react": "18.2.0",
-    "react-native": "^0.74.1",
-    "react-native-gesture-handler": "^2.16.1",
+    "react-native": "^0.74.2",
     "react-native-image-resizer": "^1.4.5",
-    "react-native-safe-area-context": "^4.10.3",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-swiper": "^1.6.0",
     "react-router-native": "^6.23.0"
   },
   "devDependencies": {
