--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-image-resizer": "^1.4.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
     "react-router-native": "^6.23.0"
   },
