--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
-    "react-router-native": "^6.23.0"
+    "react-router-native": "^6.23.0",
+    "expo-clipboard": "~6.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
