--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^51.0.13",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.10",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "^16.0.2",
     "expo-image-picker": "~15.0.5",
     "expo-permissions": "^14.4.0",
@@ -26,12 +27,12 @@
     "react": "18.2.0",
     "react-native": "^0.74.2",
     "react-native-image-resizer": "^1.4.5",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-swiper": "^1.6.0",
-    "react-router-native": "^6.23.0",
-    "expo-clipboard": "~6.0.3"
+    "react-router-native": "^6.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
